layout + footer &header added

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,22 @@ h2,
 h3,
 h4,
 p {
+  margin: 0 auto;
+  padding: 0 auto;
+}
+img {
   margin: 0;
-  padding: 0;
+  background: goldenrod;
+  max-width: 140rem;
+  min-width: fit-content;
+}
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4rem;
+  max-width: 140rem;
+}
+.split {
+  display: inline-block;
 }
