--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,17 +2,23 @@
 *::after,
 *::before {
   margin: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
-html {
-  font-size: 10px;
-}
+
 body {
+  color: #333;
+  background-color: #d0e0e0;
   margin: 0 auto;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   line-height: 1.6;
 }
+
+a {
+  color: #333;
+  text-decoration: none;
+}
+
 h1,
 h2,
 h3,
@@ -21,19 +27,31 @@ p {
   margin: 0 auto;
   padding: 0 auto;
 }
+
 img {
   margin: 0;
   background: goldenrod;
   max-width: 140rem;
+  min-width: -webkit-fit-content;
+  min-width: -moz-fit-content;
   min-width: fit-content;
 }
+
 .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 4rem;
   max-width: 140rem;
 }
+
 .split {
   display: inline-block;
 }
+/*# sourceMappingURL=globals.css.map */
