--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,8 @@ body {
   color: #333;
   background-color: #d0e0e0;
   margin: 0 auto;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+ Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   line-height: 1.6;
 }
 
@@ -55,3 +56,10 @@ img {
   display: inline-block;
 }
 /*# sourceMappingURL=globals.css.map */
+.image-grid{
+  display: grid;
+  grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+  grid-gap: 10px;
+}
+
+.image-grid Image{width: 250px;}
